# Trinity-WGPU

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Assets/Framework/Materials/: Default.tmat
Assets/Framework/Shaders/: Terrain.wgsl
Editor/: CMakeLists.txt
Framework/: CMakeLists.txt
Framework/Include/Animation/: AnimationClip.h  AnimationPose.h  AnimationTransform.h  CrossfadeController.h  Frame.h  Skeleton.h  Track.h  TransformTrack.h
Framework/Include/Core/: Application.h  ConsoleApplication.h  Image.h  Resource.h  ResourceCache.h  Singleton.h  Utils.h  Window.h
Framework/Include/Graphics/: BindGroup.h  BindGroupLayout.h  Buffer.h  ComputePass.h  FrameBuffer.h  GraphicsDevice.h  IndexBuffer.h  Material.h  Model.h  PBRMaterial.h  RenderPass.h  RenderPipeline.h  ResourceCache.h  Sampler.h  Shader.h  StorageBuffer.h  SwapChain.h  Texture.h  Texture2D.h  TextureCube.h  UniformBuffer.h  VertexBuffer.h  VertexLayout.h
Framework/Include/Gui/: Font.h  Gui.h  GuiRenderer.h  ImGuiFont.h  ImGuiRenderer.h
Framework/Include/Input/: Input.h
Framework/Include/Math/: BoundingBox.h  BoundingSphere.h  Frustum.h  Math.h  Types.h
Framework/Include/Scene/: Component.h  ComponentFactory.h  GltfImporter.h  Model.h  Node.h  Scene.h  SceneLoader.h  SceneRenderer.h
Framework/Include/Scene/Components/: Camera.h  Light.h  Mesh.h  PerspectiveCamera.h  Script.h  ScriptContainer.h  SubMesh.h  Transform.h
Framework/Include/Scene/Components/Scripts/: Animator.h  FreeCamera.h
Framework/Include/Scene/Skybox/: Skybox.h  SkyboxImporter.h  SkyboxMaterial.h  SkyboxRenderer.h
Framework/Include/Scene/Terrain/: HeightMap.h  QuadGridMesh.h  QuadTree.h  Terrain.h  TerrainImporter.h  TerrainMaterial.h  TerrainRenderer.h
Framework/Include/VFS/: DiskFile.h  File.h  FileReader.h  FileSystem.h  FileWriter.h
Framework/Source/Animation/: AnimationClip.cpp  AnimationPose.cpp  AnimationTransform.cpp  CrossfadeController.cpp  Skeleton.cpp  TransformTrack.cpp
Framework/Source/Core/: Application.cpp  ConsoleApplication.cpp  Image.cpp  Resource.cpp  ResourceCache.cpp  Utils.cpp  Window.cpp
Framework/Source/Graphics/: BindGroup.cpp  BindGroupLayout.cpp  Buffer.cpp  ComputePass.cpp  FrameBuffer.cpp  GraphicsDevice.cpp  IndexBuffer.cpp  Material.cpp  Model.cpp  PBRMaterial.cpp  RenderPass.cpp  RenderPipeline.cpp  Resource.cpp  ResourceCache.cpp  Sampler.cpp  Shader.cpp  StorageBuffer.cpp  SwapChain.cpp  Texture.cpp  Texture2D.cpp  TextureCube.cpp  UniformBuffer.cpp  VertexBuffer.cpp  VertexLayout.cpp
Framework/Source/Gui/: Font.cpp  Gui.cpp  GuiRenderer.cpp  ImGuiFont.cpp  ImGuiRenderer.cpp
Framework/Source/Input/: Input.cpp
Framework/Source/Math/: BoundingBox.cpp  Frustum.cpp
Framework/Source/Scene/: Component.cpp  ComponentFactory.cpp  GltfImporter.cpp  Model.cpp  Node.cpp  Scene.cpp  SceneLoader.cpp  SceneRenderer.cpp
Framework/Source/Scene/Components/: Camera.cpp  Light.cpp  Mesh.cpp  PerspectiveCamera.cpp  Script.cpp  ScriptContainer.cpp  SubMesh.cpp  Transform.cpp
Framework/Source/Scene/Components/Scripts/: Animator.cpp  FreeCamera.cpp
Framework/Source/Scene/Skybox/: Skybox.cpp  SkyboxImporter.cpp  SkyboxMaterial.cpp  SkyboxRenderer.cpp
Framework/Source/Scene/Terrain/: HeightMap.cpp  QuadGridMesh.cpp  QuadTree.cpp  Terrain.cpp  TerrainImporter.cpp  TerrainMaterial.cpp  TerrainRenderer.cpp
Framework/Source/Utils/: StringHelper.cpp
Framework/Source/VFS/: FileSystem.cpp
Samples/: CMakeLists.txt
Samples/Common/Include/: SampleApplication.h
Samples/Common/Source/: SampleApplication.cpp
Samples/EmptyWindow/: CMakeLists.txt
Samples/EmptyWindow/Include/: EmptyWindow.h
Samples/EmptyWindow/Source/: EmptyWindow.cpp
Samples/Gui/: CMakeLists.txt  index.html
Samples/Gui/Assets/Framework/Materials/: Default.tmat
Samples/Gui/Include/: GuiSample.h
Samples/Gui/Source/: GuiSample.cpp
Samples/ImGui/: CMakeLists.txt
Samples/ImGui/Assets/Framework/Samplers/: Default.tsamp
Samples/ImGui/Assets/Framework/Shaders/: Skybox.wgsl
Samples/ImGui/Include/: ImGuiSample.h
Samples/ImGui/Source/: ImGuiSample.cpp
Samples/ModelViewer/: AppConfig.json  CMakeLists.txt  index.html
Samples/ModelViewer/Assets/Framework/Shaders/: PBR.wgsl
Samples/ModelViewer/Assets/Models/SillyDancing/: SillyDancing.tmesh  SillyDancing.tskel
Samples/ModelViewer/Assets/Models/Woman/: Woman.tmesh  Woman.tskel
Samples/ModelViewer/Include/: ModelViewerSample.h
Samples/ModelViewer/Source/: ModelViewerSample.cpp
Samples/RenderPass/: AppConfig.json  CMakeLists.txt  index.html  style.css
Samples/RenderPass/Assets/: AppConfig.json
Samples/RenderPass/Assets/Framework/Samplers/: Default.tsamp
Samples/RenderPass/Assets/Framework/Shaders/: PBR.wgsl  Terrain.wgsl
Samples/RenderPass/Assets/Scenes/Sponza/: Sponza.tscene
Samples/RenderPass/Include/: RenderPassSample.h
Samples/RenderPass/Source/: RenderPassSample.cpp
Samples/TerrainViewer/: AppConfig.json  CMakeLists.txt
Samples/TerrainViewer/Assets/: AppConfig.json
Samples/TerrainViewer/Assets/Framework/Shaders/: PBR.wgsl  Terrain.wgsl
Samples/TerrainViewer/Assets/Skybox/: skybox.tsky
Samples/TerrainViewer/Assets/Terrain/: terrain.ttrn
Samples/TerrainViewer/Include/: TerrainViewerSample.h
Samples/TerrainViewer/Source/: TerrainViewerSample.cpp
Tools/: CMakeLists.txt
Tools/ModelConverter/: CMakeLists.txt
Tools/ModelConverter/Include/: ModelConverter.h
Tools/ModelConverter/Source/: ModelConverter.cpp
Tools/SceneConverter/: CMakeLists.txt
Tools/SceneConverter/Include/: SceneConverter.h
Tools/SceneConverter/Source/: SceneConverter.cpp
Tools/SkyboxTool/: CMakeLists.txt
Tools/SkyboxTool/Include/: SkyboxTool.h
Tools/SkyboxTool/Source/: SkyboxTool.cpp
Tools/TerrainTool/: CMakeLists.txt  TerrainConfig.json
Tools/TerrainTool/Include/: TerrainTool.h
Tools/TerrainTool/Source/: TerrainTool.cpp
Tools/WgslValidator/: CMakeLists.txt
Tools/WgslValidator/Include/: WgslValidator.h
Tools/WgslValidator/Source/: WgslValidator.cpp
Trinity/: CMakeLists.txt  Trinity.cpp  Trinity.h
(+103 files in other folders)
